--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,300italic,700italic' rel='stylesheet'
     type='text/css'>
-  <link rel="stylesheet" href="../build/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <p class="logo"><img src="../build/images/icebreaker.svg" alt="icebreaker logo" /></p>
+        <p class="logo"><img src="images/icebreaker.svg" alt="icebreaker logo" /></p>
       </div>
       <div class="col-xs-12 col-sm-6">
         <p>New Zealand started outdoor apparel company offering customers a natural alternative to synthetics through
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <p class="logo"><img src="../build/images/copious.svg" alt="copious logo" /></p>
+        <p class="logo"><img src="images/copious.svg" alt="copious logo" /></p>
       </div>
       <div class="col-xs-12 col-sm-6">
         <p>Copious' work simplifies the complex, enriches the transactions a user has with their clients' brands, and
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <p class="logo"><img src="../build/images/kinesis.svg" alt="kinesis logo" /></p>
+        <p class="logo"><img src="images/kinesis.svg" alt="kinesis logo" /></p>
       </div>
       <div class="col-xs-12 col-sm-6">
         <p>Kinesis is a strategic marketing and design firm based in Portland, Oregon. They specialize in high-impact
