--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
 <body>
   <header id="top">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col col-xs-12">
         <h1>jade faist</h1>
       </div>
     </div>
   </header>
   <div id="content">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
+    <div class="intro row">
+      <div class="col col-xs-12 col-sm-6">
         <p>With over a decade of industry experience, I have learned that my most valuable contributions can be
           defined as
           building and translating.</p>
@@ -34,28 +34,34 @@
           needs,
           designer choices, and code paths to build the right solution to practical problems.</p>
 
+        <p>I'm proud of the commitment to the companies I've worked for.</p>
+
         <h2>Where have I worked?</h2>
 
       </div>
     </div>
     <section class="entry row">
-      <div class="col-xs-12 col-sm-2">
-        <div class="summary">
-          <strong>5.5 years</strong><br />
-          July 2017 - Mar 2023<br />
-          <br />
-          Global Digital Platform Engineering Manager
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col col-xs-12 col-sm-4">
         <p class="logo"><img src="images/icebreaker.svg" alt="icebreaker logo" /></p>
       </div>
-      <div class="col-xs-12 col-sm-6">
-        <p>New Zealand started outdoor apparel company offering customers a natural alternative to synthetics through
-          Merino wool. Offering product via wholesale, retail, and eCommerce. Joining the eCom team in Portland and
-          later
-          relocating the the Auckland office I was able to be part of this global group of people who want to make a
-          difference, who share common beliefs and who have the courage to go their own way.</p>
+      <div class="col col-xs-12 col-sm-2">
+        <div class="summary row">
+          <div class="col col-xs-6 col-sm-12">
+            <p>Global Digital Platform Engineering Manager</p>
+          </div>
+          <div class="col col-xs-6 col-sm-12">
+            <p>
+              <strong>5.5 years</strong><br />
+              July 2017 - Mar 2023
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-xs-12 col-sm-6">
+        <p>Icebreaker is a New Zealand started outdoor apparel company offering customers a natural alternative to
+          synthetics through Merino wool. Offering product via wholesale, retail, and eCommerce. Joining the eCom team
+          in Portland and later relocating the the Auckland office I was able to be part of this global group of people
+          who want to make a difference, who share common beliefs and who have the courage to go their own way.</p>
 
         <p><strong>Responsibilities:</strong> development, system improvements, project organization, code review and
           management</p>
@@ -64,55 +70,69 @@
       </div>
     </section>
     <section class="entry row">
-      <div class="col-xs-12 col-sm-2">
-        <div class="summary">
-          <strong>3 years</strong><br />
-          Feb 2014 - Feb 2017<br />
-          <br />
-          Senior UX Engineer
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col col-xs-12 col-sm-4">
         <p class="logo"><img src="images/copious.svg" alt="copious logo" /></p>
       </div>
-      <div class="col-xs-12 col-sm-6">
-        <p>Copious' work simplifies the complex, enriches the transactions a user has with their clients' brands, and
-          includes custom web applications, ecommerce experiences, and mobile apps. They focus on architecting,
+      <div class="col col-xs-12 col-sm-2">
+        <div class="summary row">
+          <div class="col col-xs-6 col-sm-12">
+            <p>Senior UX Engineer</p>
+          </div>
+          <div class="col col-xs-6 col-sm-12">
+            <p>
+              <strong>3 years</strong><br />
+              Feb 2014 - Feb 2017
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-xs-12 col-sm-6">
+        <p>Copious' work simplified the complex, enriched the transactions a user had with their clients' brands, and
+          included custom web applications, ecommerce experiences, and mobile apps. They focused on architecting,
           designing and building human-centered digital and ecommerce experiences.</p>
 
         <p><strong>Responsibilities:</strong> Front-end development, project estimating and planning, team management,
-          technical
-          leadership, code reviewing</p>
+          technical leadership, code reviewing</p>
       </div>
     </section>
     <section class="entry row">
-      <div class="col-xs-12 col-sm-2">
-        <div class="summary">
-          <strong>8 years</strong><br />
-          Jan 2006 - Jan 2014<br />
-          <br />
-          Senior Interactive
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col col-xs-12 col-sm-4">
         <p class="logo"><img src="images/kinesis.svg" alt="kinesis logo" /></p>
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="col col-xs-12 col-sm-2">
+        <div class="summary row">
+          <div class="col col-xs-6 col-sm-12">
+            <p>Senior Interactive</p>
+          </div>
+          <div class="col col-xs-6 col-sm-12">
+            <p>
+              <strong>8 years</strong><br />
+              Jan 2006 - Jan 2014
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-xs-12 col-sm-6">
         <p>Kinesis is a strategic marketing and design firm based in Portland, Oregon. They specialize in high-impact
           web design, graphic design, and marketing services for growth-oriented businesses.</p>
 
-        <p><strong>Responsibilities:</strong> web programmingweb designUXUIprocess developmentsystems architecture</p>
+        <p><strong>Responsibilities:</strong> web programming, web design, UX, UI, process development, systems
+          architecture</p>
 
         <a href="#">kinesisinc.com</a>
       </div>
     </section>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col col-xs-12 col-sm-6">
         <h2>What have I worked on?</h2>
+
+        <p>My career (so far) has been focoused on web work. A lot (all of icebreaker) has been in the ecom world. That
+          said, my skills and knowledge come from being a competent frontend developer that has transitioned to being an
+          engineering manager.</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-6">
+      <div class="col col-xs-12 col-sm-6">
         <h3>Skills</h3>
         <ul>
           <li>Agile Practices</li>
@@ -127,20 +147,24 @@
         </ul>
 
       </div>
-      <div class="col-xs-12 col-sm-6">
+      <div class="col col-xs-12 col-sm-6">
         <h3>Develpment Proficiencies</h3>
         <ul>
-          <li>HTML 5</li>
-          <li>CSS / Sass</li>
-          <li>JavaScript</li>
           <li>Commerce Cloud (Demandware)</li>
           <li>Magento (Certified)</li>
           <li>WordPress</li>
           <li>Vue.js</li>
-          <li>Jquery</li>
           <li>Backbone</li>
-          <li>Guard, Grunt, Gulp</li>
+        </ul>
+        <ul>
+          <li>HTML 5</li>
+          <li>CSS / Sass</li>
+          <li>JavaScript</li>
+          <li>Jquery</li>
           <li>Webpack</li>
+          <li>Guard, Grunt, Gulp</li>
+        </ul>
+        <ul>
           <li>Git / Github</li>
           <li>Jira / Confluence</li>
           <li>Photoshop</li>
@@ -149,21 +173,25 @@
         </ul>
 
       </div>
-      <div class="col-xs-12 col-sm-6">
-        <p>bachelors degree in graphic design
-          Minor in Applied Multimedia
-          SOUTHERN OREGON UNIVERSITY
-          2002 - June 2006</p>
+      <div class="col col-xs-12 col-sm-6">
+        <p>My on the job experience has taught me most of what I know in the industry, but I also of course have the
+          starting point of a:</p>
+        <blockquote>
+          bachelors degree in graphic design<br />
+          Minor in Applied Multimedia<br />
+          SOUTHERN OREGON UNIVERSITY<br />
+          2002 - June 2006
+        </blockquote>
       </div>
     </div>
   </div>
   <footer id="bottom">
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col col-xs-6">
         <a href="#">email me</a>
         <a href="#">download resume</a>
       </div>
-      <div class="col-xs-6">
+      <div class="col col-xs-6">
         <a href="#">linkedIn</a>
         <a href="#">Github</a>
       </div>
