major content updates

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -7,8 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="images/favicon.ico" rel="shortcut icon">
-  <link href="images/touch.png" rel="apple-touch-icon-precomposed">
+  <!-- <link href="images/favicon.ico" rel="shortcut icon"> -->
+  <!-- <link href="images/touch.png" rel="apple-touch-icon-precomposed"> -->
 
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,300italic,700italic' rel='stylesheet'
     type='text/css'>
@@ -26,18 +26,20 @@
   <div id="content">
     <div class="intro row">
       <div class="col col-xs-12 col-sm-6">
-        <p>With over a decade of industry experience, I have learned that my most valuable contributions can be
-          defined as
-          building and translating.</p>
+        <p>As an accomplished professional with more than a decade of industry experience, I have cultivated a
+          reputation for consistently delivering results through building and translating. With a keen ability to apply
+          logic and reason to every situation, I possess a process-oriented mentality that enables me to effectively
+          translate user needs, designer choices, and code paths into practical solutions to complex problems.</p>
+      </div>
+      <div class="col col-xs-12 col-sm-6">
+        <p>My experience in engineering management has equipped me with the leadership and communication skills
+          necessary to effectively lead teams towards achieving organizational goals while maintaining a focus on
+          innovation and quality.</p>
 
-        <p>While applying logic and reason to every situation, a process-oriented mentality helps me translate user's
-          needs,
-          designer choices, and code paths to build the right solution to practical problems.</p>
-
-        <p>I'm proud of the commitment to the companies I've worked for.</p>
-
+        <p>I take great pride in my commitment to the organizations I have served.</p>
+      </div>
+      <div class="col col-xs-12">
         <h2>Where have I worked?</h2>
-
       </div>
     </div>
     <section class="entry row">
@@ -58,15 +60,20 @@
         </div>
       </div>
       <div class="col col-xs-12 col-sm-6">
-        <p>Icebreaker is a New Zealand started outdoor apparel company offering customers a natural alternative to
-          synthetics through Merino wool. Offering product via wholesale, retail, and eCommerce. Joining the eCom team
-          in Portland and later relocating the the Auckland office I was able to be part of this global group of people
-          who want to make a difference, who share common beliefs and who have the courage to go their own way.</p>
 
-        <p><strong>Responsibilities:</strong> development, system improvements, project organization, code review and
-          management</p>
+        <p>Icebreaker is a New Zealand founded outdoor apparel company that offers customers a sustainable and natural
+          alternative to synthetic fabrics by utilizing Merino wool. Their products are available through wholesale,
+          retail, and eCommerce channels. As a member of the eCommerce team in Portland, I had the privilege of being
+          part of a global community of like-minded individuals who were committed to making a positive impact. After
+          relocating to the Auckland office, I was continually inspired by our team's shared values and their
+          unwavering dedication to forging their own path. At Icebreaker, we are driven by our mission to create
+          high-quality products that are both sustainable and functional, empowering our customers to embrace their
+          connection to the outdoors.</p>
 
-        <a href="#">icebreaker.com</a>
+        <p><strong>Responsibilities:</strong> At Icebreaker, I was responsible for team building, project organization,
+          strategic planning, system development and improvement, and code review and management.</p>
+
+        <a href="https://www.icebreaker.com/" target="_blank">icebreaker.com</a>
       </div>
     </section>
     <section class="entry row">
@@ -87,12 +94,13 @@
         </div>
       </div>
       <div class="col col-xs-12 col-sm-6">
-        <p>Copious' work simplified the complex, enriched the transactions a user had with their clients' brands, and
-          included custom web applications, ecommerce experiences, and mobile apps. They focused on architecting,
-          designing and building human-centered digital and ecommerce experiences.</p>
+        <p>Copious had a reputation for simplifying complex processes, enhancing the interactions between users and
+          their clients' brands, and developing customized web applications, ecommerce experiences, and mobile apps.
+          Their specialty was in creating digital and ecommerce experiences with a human-centered approach, with a focus
+          on architecture, design, and development.</p>
 
-        <p><strong>Responsibilities:</strong> Front-end development, project estimating and planning, team management,
-          technical leadership, code reviewing</p>
+        <p><strong>Responsibilities:</strong> During my time at Copious, my responsibilities included front-end
+          development, project planning and estimation, team management, technical leadership, and code review.</p>
       </div>
     </section>
     <section class="entry row">
@@ -116,87 +124,114 @@
         <p>Kinesis is a strategic marketing and design firm based in Portland, Oregon. They specialize in high-impact
           web design, graphic design, and marketing services for growth-oriented businesses.</p>
 
-        <p><strong>Responsibilities:</strong> web programming, web design, UX, UI, process development, systems
-          architecture</p>
+        <p><strong>Responsibilities:</strong> During my tenure at Kinesis, I was responsible for web programming, web
+          design, UX/UI, process development, and systems architecture.</p>
 
-        <a href="#">kinesisinc.com</a>
+        <a href="https://www.kinesisinc.com/" target="_blank">kinesisinc.com</a>
       </div>
     </section>
     <div class="row">
       <div class="col col-xs-12 col-sm-6">
         <h2>What have I worked on?</h2>
 
-        <p>My career (so far) has been focoused on web work. A lot (all of icebreaker) has been in the ecom world. That
-          said, my skills and knowledge come from being a competent frontend developer that has transitioned to being an
-          engineering manager.</p>
+        <p>Throughout my professional journey, my expertise has been honed towards web development with a particular
+          emphasis on the e-commerce industry. I possess a comprehensive understanding of frontend development and have
+          demonstrated a seamless transition to an engineering management role. Moreover, while my experience has
+          primarily been focused on e-commerce, my skills position me to explore and contribute to other industries and
+          domains as well.</p>
       </div>
     </div>
+
     <div class="row">
       <div class="col col-xs-12 col-sm-6">
         <h3>Skills</h3>
         <ul>
-          <li>Agile Practices</li>
-          <li>Product Ownership</li>
-          <li>Roadmap Planning</li>
-          <li>Vendor Coordination</li>
-          <li>People Management</li>
-          <li>User Experience</li>
-          <li>Responsive Design & Development</li>
-          <li>Accessibility</li>
-          <li>SEO</li>
+          <li>Agile practices and methodologies</li>
+          <li>Product Ownership and Roadmap Planning</li>
+          <li>Vendor Coordination and management</li>
+          <li>People Management and team leadership</li>
+          <li>User Experience design and delivery</li>
+          <li>Responsive Design & Development for modern web applications</li>
+          <li>Accessibility standards and guidelines</li>
+          <li>Search Engine Optimization (SEO) best practices</li>
         </ul>
+      </div>
+      <div class="col col-xs-12 col-sm-6">
+        <h3>Development Proficiencies</h3>
+
+        <ul>
+          <li>Commerce Cloud (Demandware) and Magento (Certified)</li>
+          <li>WordPress and Vue.js frameworks</li>
+          <li>Backbone.js, HTML5, CSS/Sass, and JavaScript</li>
+          <li>jQuery, Webpack, and build automation tools (Guard, Grunt, Gulp)</li>
+          <li>Git/Github and project management tools (Jira, Confluence)</li>
+          <li>Adobe Photoshop, Illustrator, and Sketch</li>
+        </ul>
+      </div>
+    </div>
+    <!--
+    <div class="row">
+      <div class="col col-xs-12 col-sm-6">
+        <h3>Skills</h3>
+        <ul>
+          <li>Proficient in Agile practices and methodologies</li>
+          <li>Demonstrated expertise in Product Ownership and Roadmap Planning</li>
+          <li>Experienced in Vendor Coordination and management</li>
+          <li>Skilled in People Management and team leadership</li>
+          <li>Adept in designing and delivering optimal User Experience</li>
+          <li>Experienced in Responsive Design & Development for modern web applications</li>
+          <li>Expertise in Accessibility standards and guidelines</li>
+          <li>Proficient in Search Engine Optimization (SEO) best practices</li>
+        </ul>
+
 
       </div>
       <div class="col col-xs-12 col-sm-6">
-        <h3>Develpment Proficiencies</h3>
+        <h3>Development Proficiencies</h3>
         <ul>
-          <li>Commerce Cloud (Demandware)</li>
-          <li>Magento (Certified)</li>
-          <li>WordPress</li>
-          <li>Vue.js</li>
-          <li>Backbone</li>
-        </ul>
-        <ul>
-          <li>HTML 5</li>
-          <li>CSS / Sass</li>
-          <li>JavaScript</li>
-          <li>Jquery</li>
-          <li>Webpack</li>
-          <li>Guard, Grunt, Gulp</li>
-        </ul>
-        <ul>
-          <li>Git / Github</li>
-          <li>Jira / Confluence</li>
-          <li>Photoshop</li>
-          <li>Illustrator</li>
-          <li>sketch</li>
+          <li>Extensive experience in Commerce Cloud (Demandware) and Magento (Certified)</li>
+          <li>Expertise in WordPress and Vue.js frameworks</li>
+          <li>Proficient in Backbone.js for building dynamic user interfaces</li>
+          <li>Sound knowledge of HTML5, CSS/Sass, and JavaScript</li>
+          <li>Demonstrated proficiency in jQuery for efficient DOM manipulation and event handling</li>
+          <li>Experience in Webpack for module bundling and optimization</li>
+          <li>Familiarity with build automation tools such as Guard, Grunt, and Gulp</li>
+          <li>Proficient in Git/Github for version control and collaborative development</li>
+          <li>Expertise in project management tools such as Jira and Confluence</li>
+          <li>Skilled in Adobe Photoshop, Illustrator, and Sketch for graphic design and layout</li>
         </ul>
 
       </div>
+    </div>
+      -->
+    <div class="row">
       <div class="col col-xs-12 col-sm-6">
-        <p>My on the job experience has taught me most of what I know in the industry, but I also of course have the
-          starting point of a:</p>
-        <blockquote>
-          bachelors degree in graphic design<br />
-          Minor in Applied Multimedia<br />
-          SOUTHERN OREGON UNIVERSITY<br />
-          2002 - June 2006
-        </blockquote>
+        <p>My on-the-job experience has been instrumental in shaping my skills and knowledge in the industry, but I also
+          have a Bachelor's degree in graphic design with a minor in applied multimedia from Southern Oregon University
+          (completed in June 2006). This educational background has given me a strong foundation in design principles
+          and a range of multimedia skills that have been useful in my work.</p>
+      </div>
+      <div class="col col-xs-12 col-sm-6">
+        <p>While I value my education, I also recognize the importance of continually learning and adapting to new
+          trends and technologies. As such, I strive to stay up-to-date with the latest developments in the industry and
+          actively seek out opportunities to expand my skill set. By combining my education with my experience and
+          ongoing learning, I am able to bring a unique perspective and valuable expertise to any project or team.</p>
       </div>
     </div>
   </div>
   <footer id="bottom">
     <div class="row">
-      <div class="col col-xs-6">
-        <a href="#">email me</a>
-        <a href="#">download resume</a>
+      <div class="links col col-xs-6">
+        <a href="mailto:jade@jfaist.com" title="Email Me">email me</a>
+        <a href="jadefaist-resume.pdf" target="_blank" title="Download My Resume">download resume</a>
       </div>
-      <div class="col col-xs-6">
-        <a href="#">linkedIn</a>
-        <a href="#">Github</a>
+      <div class="links col col-xs-6">
+        <a href="http://www.linkedin.com/in/faist/" target="_blank" title="linkIn Profile">linkedIn</a>
+        <a href="https://jadef.github.io/" target="_blank" title="Github space">Github</a>
       </div>
     </div>
   </footer>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
