content and background improvements

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
 
         <p>I take great pride in my commitment to the organizations I have served.</p>
       </div>
+    </div>
+    <div class="row">
       <div class="col col-xs-12">
         <h2>Where have I worked?</h2>
       </div>
@@ -62,13 +64,12 @@
       <div class="col col-xs-12 col-sm-6">
 
         <p>Icebreaker is a New Zealand founded outdoor apparel company that offers customers a sustainable and natural
-          alternative to synthetic fabrics by utilizing Merino wool. Their products are available through wholesale,
-          retail, and eCommerce channels. As a member of the eCommerce team in Portland, I had the privilege of being
-          part of a global community of like-minded individuals who were committed to making a positive impact. After
-          relocating to the Auckland office, I was continually inspired by our team's shared values and their
-          unwavering dedication to forging their own path. At Icebreaker, we are driven by our mission to create
-          high-quality products that are both sustainable and functional, empowering our customers to embrace their
-          connection to the outdoors.</p>
+          alternative to synthetic fabrics by utilizing Merino wool. It is a brand driven by the mission to
+          create high-quality products that are both sustainable and functional, empowering customers to embrace their
+          connection to the outdoors. As a member of the eCommerce team, I had the privilege of being part of a global
+          community of like-minded individuals who were committed to making a positive impact. After relocating from
+          Portland Oregon to the Auckland office, I was part of growing a team that continually motivated me with their
+          shared values and their unwavering dedication to forging their own path.</p>
 
         <p><strong>Responsibilities:</strong> At Icebreaker, I was responsible for team building, project organization,
           strategic planning, system development and improvement, and code review and management.</p>
@@ -141,7 +142,7 @@
           domains as well.</p>
       </div>
     </div>
-
+    <!--
     <div class="row">
       <div class="col col-xs-12 col-sm-6">
         <h3>Skills</h3>
@@ -169,7 +170,8 @@
         </ul>
       </div>
     </div>
-    <!--
+    -->
+
     <div class="row">
       <div class="col col-xs-12 col-sm-6">
         <h3>Skills</h3>
@@ -178,7 +180,7 @@
           <li>Demonstrated expertise in Product Ownership and Roadmap Planning</li>
           <li>Experienced in Vendor Coordination and management</li>
           <li>Skilled in People Management and team leadership</li>
-          <li>Adept in designing and delivering optimal User Experience</li>
+          <li>Adept in facilitating and delivering optimal User Experience</li>
           <li>Experienced in Responsive Design & Development for modern web applications</li>
           <li>Expertise in Accessibility standards and guidelines</li>
           <li>Proficient in Search Engine Optimization (SEO) best practices</li>
@@ -191,11 +193,11 @@
         <ul>
           <li>Extensive experience in Commerce Cloud (Demandware) and Magento (Certified)</li>
           <li>Expertise in WordPress and Vue.js frameworks</li>
-          <li>Proficient in Backbone.js for building dynamic user interfaces</li>
           <li>Sound knowledge of HTML5, CSS/Sass, and JavaScript</li>
-          <li>Demonstrated proficiency in jQuery for efficient DOM manipulation and event handling</li>
           <li>Experience in Webpack for module bundling and optimization</li>
-          <li>Familiarity with build automation tools such as Guard, Grunt, and Gulp</li>
+          <li>Proficient with build automation tools such as Grunt and Gulp</li>
+          <li>Familiarity in Backbone.js for building dynamic user interfaces</li>
+          <li>Demonstrated proficiency in jQuery for efficient DOM manipulation and event handling</li>
           <li>Proficient in Git/Github for version control and collaborative development</li>
           <li>Expertise in project management tools such as Jira and Confluence</li>
           <li>Skilled in Adobe Photoshop, Illustrator, and Sketch for graphic design and layout</li>
@@ -203,8 +205,7 @@
 
       </div>
     </div>
-      -->
-    <div class="row">
+    <div class="closing row">
       <div class="col col-xs-12 col-sm-6">
         <p>My on-the-job experience has been instrumental in shaping my skills and knowledge in the industry, but I also
           have a Bachelor's degree in graphic design with a minor in applied multimedia from Southern Oregon University
