--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- <link href="images/favicon.ico" rel="shortcut icon"> -->
-  <!-- <link href="images/touch.png" rel="apple-touch-icon-precomposed"> -->
+  <link href="images/favicon.ico" rel="shortcut icon">
 
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,300italic,700italic' rel='stylesheet'
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,300italic,700italic' rel='stylesheet'
     type='text/css'>
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -26,10 +25,7 @@
   <div id="content">
     <div class="intro row">
       <div class="col col-xs-12 col-sm-6">
-        <p>As an accomplished professional with more than a decade of industry experience, I have cultivated a
-          reputation for consistently delivering results through building and translating. With a keen ability to apply
-          logic and reason to every situation, I possess a process-oriented mentality that enables me to effectively
-          translate user needs, designer choices, and code paths into practical solutions to complex problems.</p>
+        <p>As an accomplished professional I have cultivated a reputation for consistently delivering results through building and translating. With a keen ability to apply logic and reason to every situation, I possess a process-oriented mentality that enables me to effectively translate user needs, designer choices, and code paths into practical solutions to complex problems.</p>
       </div>
       <div class="col col-xs-12 col-sm-6">
         <p>My experience in engineering management has equipped me with the leadership and communication skills
@@ -51,13 +47,16 @@
       <div class="col col-xs-12 col-sm-2">
         <div class="summary row">
           <div class="col col-xs-6 col-sm-12">
-            <p>Global Digital Platform Engineering Manager</p>
+            <p>
+              July 2017 - Mar 2023<br />
+              <strong>5.5 years</strong>
+            </p>
           </div>
           <div class="col col-xs-6 col-sm-12">
-            <p>
-              <strong>5.5 years</strong><br />
-              July 2017 - Mar 2023
-            </p>
+            <p>Global eCommerce Web Developer<br />
+              Jul 2017 - Nov 2021</p>
+            <p>Global Digital Platform Engineering Manager<br />
+              Nov 2021 - Mar 2023</p>
           </div>
         </div>
       </div>
@@ -71,8 +70,9 @@
           Portland Oregon to the Auckland office, I was part of growing a team that continually motivated me with their
           shared values and their unwavering dedication to forging their own path.</p>
 
-        <p><strong>Responsibilities:</strong> At Icebreaker, I was responsible for team building, project organization,
-          strategic planning, system development and improvement, and code review and management.</p>
+        <p><strong>Responsibilities:</strong> At Icebreaker, I was responsible for team growth and people management,
+          project organization, strategic planning, system development and improvement, and code review and management.
+        </p>
 
         <a href="https://www.icebreaker.com/" target="_blank">icebreaker.com</a>
       </div>
@@ -84,13 +84,13 @@
       <div class="col col-xs-12 col-sm-2">
         <div class="summary row">
           <div class="col col-xs-6 col-sm-12">
-            <p>Senior UX Engineer</p>
+            <p>
+              Feb 2014 - Feb 2017<br />
+              <strong>3 years</strong>
+            </p>
           </div>
           <div class="col col-xs-6 col-sm-12">
-            <p>
-              <strong>3 years</strong><br />
-              Feb 2014 - Feb 2017
-            </p>
+            <p>Senior UX Engineer</p>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
           on architecture, design, and development.</p>
 
         <p><strong>Responsibilities:</strong> During my time at Copious, my responsibilities included front-end
-          development, project planning and estimation, team management, technical leadership, and code review.</p>
+          development, project planning and estimation, team leadership, technical management, and code review.</p>
       </div>
     </section>
     <section class="entry row">
@@ -111,13 +111,13 @@
       <div class="col col-xs-12 col-sm-2">
         <div class="summary row">
           <div class="col col-xs-6 col-sm-12">
-            <p>Senior Interactive</p>
+            <p>
+              Jan 2006 - Jan 2014<br />
+              <strong>8 years</strong>
+            </p>
           </div>
           <div class="col col-xs-6 col-sm-12">
-            <p>
-              <strong>8 years</strong><br />
-              Jan 2006 - Jan 2014
-            </p>
+            <p>Senior Interactive</p>
           </div>
         </div>
       </div>
@@ -177,13 +177,14 @@
         <h3>Skills</h3>
         <ul>
           <li>Proficient in Agile practices and methodologies</li>
-          <li>Demonstrated expertise in Product Ownership and Roadmap Planning</li>
-          <li>Experienced in Vendor Coordination and management</li>
-          <li>Skilled in People Management and team leadership</li>
-          <li>Adept in facilitating and delivering optimal User Experience</li>
-          <li>Experienced in Responsive Design & Development for modern web applications</li>
-          <li>Expertise in Accessibility standards and guidelines</li>
-          <li>Proficient in Search Engine Optimization (SEO) best practices</li>
+          <li>Demonstrated expertise in product ownership and roadmap planning</li>
+          <li>Proven ability to establish and improve engineering and deployment processes</li>
+          <li>Experienced in vendor coordination and management</li>
+          <li>Skilled in people management and team leadership</li>
+          <li>Adept in facilitating and delivering optimal user experience</li>
+          <li>Experienced in responsive design & development for modern web applications</li>
+          <li>Expertise in accessibility standards and guidelines</li>
+          <li>Proficient in search engine optimization (SEO) best practices</li>
         </ul>
 
 
@@ -197,7 +198,6 @@
           <li>Experience in Webpack for module bundling and optimization</li>
           <li>Proficient with build automation tools such as Grunt and Gulp</li>
           <li>Familiarity in Backbone.js for building dynamic user interfaces</li>
-          <li>Demonstrated proficiency in jQuery for efficient DOM manipulation and event handling</li>
           <li>Proficient in Git/Github for version control and collaborative development</li>
           <li>Expertise in project management tools such as Jira and Confluence</li>
           <li>Skilled in Adobe Photoshop, Illustrator, and Sketch for graphic design and layout</li>
